tests/snapshots/examples_fixtures/type_system__failing__201_base_hof_callback_effect_missing_e400.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/201_base_hof_callback_effect_missing_e400.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/type_system/failing/201_base_hof_callback_effect_missing_e400.flx:9:5
  |
9 |     map([|1, 2, 3|], f)
  |     ^^^

Hint:
  Define it first: let map = ...;

Help:
  Did you mean `map_with_io_callback`?


Note: Downstream Errors Suppressed

I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.
== stdout ==
<not executed>
